[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "papermill"
dynamic = ["version"]
description = "Parameterize and run Jupyter and nteract Notebooks"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    { name = "nteract contributors", email = "nteract@googlegroups.com" },
]
keywords = [
    "jupyter",
    "mapreduce",
    "notebook",
    "nteract",
    "pipeline",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp >=3.9.0; python_version==\"3.12\"",
    "click",
    "entrypoints",
    "nbclient >= 0.2.0",
    "nbformat >= 5.2.0",
    "pyyaml",
    "requests",
    "tenacity >= 5.0.2",
    "tqdm >= 4.32.2",
]

[project.optional-dependencies]
all = [
    "papermill[azure,binder,gcs,github,hdfs,s3]"
]
azure = [
    "azure-datalake-store >= 0.0.30,<1.0.0a0",  # newer versions require auth changes see https://github.com/nteract/papermill/issues/825
    "azure-identity>=1.3.1",
    "azure-storage-blob >= 12.1.0",
    "requests >= 2.21.0",
]
binder = [
    "nteract-scrapbook",
    "pandas",
    "matplotlib",
    "ipywidgets",
    "ipykernel",
]
dev = [
    "attrs>=17.4.0",
    "azure-datalake-store >= 0.0.30,<1.0.0a0",
    "azure-identity>=1.3.1",
    "azure-storage-blob >= 12.1.0",
    "black >= 19.3b0",
    "boto3",
    "botocore",
    "check-manifest",
    "codecov",
    "coverage",
    "gcsfs>=0.2.0",
    "google_compute_engine",
    "hatch",
    "ipython>=5.0,<9.0.0",
    "ipywidgets",
    "moto >= 5.0.0,<5.1.0",
    "notebook",
    "pip>=18.1",
    "pre-commit",
    "pyarrow >= 2.0",
    "PyGithub >= 1.55",
    "pytest-cov>=2.6.1",
    "pytest-env>=0.6.2",
    "pytest-mock>=1.10",
    "pytest>=4.1",
    "recommonmark",
    "requests >= 2.21.0",
    "tox",
    "twine>=1.11.0",
    "wheel>=0.31.0",
]
docs = [
    "furo>=2023.9.10",
    "moto>=4.2.8",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "Sphinx>=7.2.6",
]
gcs = [
    "gcsfs>=0.2.0",
]
github = [
    "PyGithub >= 1.55",
]
hdfs = [
    "pyarrow >= 2.0",
]
s3 = [
    "boto3",
]
test = [
    "attrs>=17.4.0",
    "azure-datalake-store >= 0.0.30,<1.0.0a0",
    "azure-identity>=1.3.1",
    "azure-storage-blob >= 12.1.0",
    "black >= 19.3b0",
    "boto3",
    "botocore",
    "check-manifest",
    "codecov",
    "coverage",
    "gcsfs>=0.2.0",
    "google_compute_engine",
    "ipython>=5.0,<9.0.0",
    "ipywidgets",
    "moto >= 5.0.0,<5.1.0",
    "notebook",
    "pip>=18.1",
    "pre-commit",
    "pyarrow >= 2.0",
    "PyGithub >= 1.55",
    "pytest-cov>=2.6.1",
    "pytest-env>=0.6.2",
    "pytest-mock>=1.10",
    "pytest>=4.1",
    "recommonmark",
    "requests >= 2.21.0",
    "tox",
    "twine>=1.11.0",
    "wheel>=0.31.0",
]

[project.scripts]
papermill = "papermill.__main__:papermill"

[project.urls]
Documentation = "https://papermill.readthedocs.io"
Funding = "https://nteract.io"
Homepage = "https://github.com/nteract/papermill"
Source = "https://github.com/nteract/papermill/"
Tracker = "https://github.com/nteract/papermill/issues"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "papermill/version.py"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
    "/papermill",
]
exclude = [
    "binder/*",
]


[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true


[tool.coverage.run]
branch = false

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
omit = [
    "papermill/tests/*",
    "papermill/version.py"
]


[tool.codespell]
quiet-level = 3
# comma separated list of words; waiting for:
#  https://github.com/codespell-project/codespell/issues/2839#issuecomment-1731601603
# also adding links until they ignored by its: nature
#  https://github.com/codespell-project/codespell/issues/2243#issuecomment-1732019960
ignore-words-list = "dne, compiletime"


[tool.pytest.ini_options]
minversion = "9"
testpaths = ["papermill/tests"]
log_level = "INFO"
strict_xfail = true
addopts = ["-ra", "--strict-config", "--strict-markers"]
env = [
    "AWS_SECRET_ACCESS_KEY=foobar_secret",
    "AWS_ACCESS_KEY_ID=foobar_key"
]
filterwarnings = [
    "error",  # turn all warnings into errors
]


[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
    "I",  # isort
    "RUF100",  # unnecessary noqa comment
    "UP",  # pyupgrade
]
lint.ignore = [
    "E731",  # Do not assign a lambda expression, use a def
    "Q",      # Ignore quotes
    "UP032"  # Ignore Use f-string instead of `format` call
]
# Exclude a variety of commonly ignored directories.
exclude = [
    "docs"
]
format.quote-style = "preserve"

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py{310,311,312,313}, dist, docs, binder

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313, docs, dist

# Docs
[testenv:docs]
description = invoke sphinx-build to build the HTML docs
deps =
    .[docs,azure]
extras = docs
commands =
    sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
    python -c 'import pathlib; print("documentation available under file://\\{0\\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'

# Binder
[testenv:binder]
description = ensure /binder/*ipynb are runnable
extras = binder
changedir = binder
commands =
    python -m ipykernel install --user --name=python3
    python -c "import papermill as pm; pm.execute_notebook('cli-simple/simple_input.ipynb', '{toxworkdir}/out.ipynb', parameters=\\{'msg': 'test'\\})"

# Distro
[testenv:dist]
skip_install = true
deps = build
commands =
    python -m build --outdir {distdir}
    /bin/bash -c 'python -m pip install -U --force-reinstall {distdir}/papermill*.tar.gz'
    /bin/bash -c 'python -m pip install -U --force-reinstall {distdir}/papermill*.whl'

[testenv]
# disable Python's hash randomization for tests that stringify dicts, etc
setenv =
    PYTHONHASHSEED = 0
    AWS_ACCESS_KEY_ID=foobar_key
    AWS_SECRET_ACCESS_KEY=foobar_secret
passenv = *
basepython =
    py310: python3.10
    py311: python3.11
    py312: python3.12
    py313: python3.13
    dist: python3.13
    docs: python3.13
    binder: python3.13
deps = .[dev]
# Have to use /bin/bash or the `*` will cause that argument to get quoted by the tox command line...
allowlist_externals = /bin/bash
commands = pytest -v --maxfail=2 --cov=papermill -W always {posargs}
"""
