[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "wheel" ]

[project]
name = "papermill"
description = "Parameterize and run Jupyter and nteract Notebooks"
readme = "README.md"
keywords = [ "jupyter", "mapreduce", "notebook", "nteract", "pipeline" ]
license = { text = "BSD" }
authors = [
  { name = "nteract contributors", email = "nteract@googlegroups.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "aiohttp>=3.9; python_version=='3.12'",
  "click",
  "entrypoints",
  "nbclient>=0.2",
  "nbformat>=5.2",
  "pyyaml",
  "requests",
  "tenacity>=5.0.2",
  "tqdm>=4.32.2",
]

optional-dependencies.all = [
  "azure-datalake-store>=0.0.30,<1.0.0a0",
  "azure-identity>=1.3.1",
  "azure-storage-blob>=12.1",
  "black>=19.3b0",
  "boto3",
  "gcsfs>=0.2",
  "pyarrow>=2",
  "pygithub>=1.55",
  "requests>=2.21",
]
optional-dependencies.azure = [
  "azure-datalake-store>=0.0.30,<1.0.0a0",
  "azure-identity>=1.3.1",
  "azure-storage-blob>=12.1",
  "requests>=2.21",
]
optional-dependencies.black = [ "black>=19.3b0" ]
optional-dependencies.dev = [
  "attrs>=17.4",
  "azure-datalake-store>=0.0.30,<1.0.0a0",
  "azure-identity>=1.3.1",
  "azure-storage-blob>=12.1",
  "black>=19.3b0",
  "boto3",
  "botocore",
  "bumpversion",
  "check-manifest",
  "codecov",
  "coverage",
  "gcsfs>=0.2",
  "google-compute-engine",
  "ipython>=5,<9",
  "ipywidgets",
  "moto>=5,<5.1",
  "notebook",
  "pip>=18.1",
  "pre-commit",
  "pyarrow>=2",
  "pygithub>=1.55",
  "pytest>=4.1",
  "pytest-cov>=2.6.1",
  "pytest-env>=0.6.2",
  "pytest-mock>=1.10",
  "recommonmark",
  "requests>=2.21",
  "setuptools>=38.6",
  "tox",
  "twine>=1.11",
  "wheel>=0.31",
]
optional-dependencies.docs = [
  "azure-datalake-store>=0.0.30,<1.0.0a0",
  "azure-identity>=1.3.1",
  "azure-storage-blob>=12.1",
  "black>=19.3b0",
  "boto3",
  "furo>=2023.9.10",
  "gcsfs>=0.2",
  "moto>=4.2.8",
  "myst-parser>=2",
  "pyarrow>=2",
  "pygithub>=1.55",
  "requests>=2.21",
  "sphinx>=7.2.6",
  "sphinx-copybutton>=0.5.2",
]
optional-dependencies.gcs = [ "gcsfs>=0.2" ]
optional-dependencies.github = [ "pygithub>=1.55" ]
optional-dependencies.hdfs = [ "pyarrow>=2" ]
optional-dependencies.s3 = [ "boto3" ]
optional-dependencies.test = [
  "attrs>=17.4",
  "azure-datalake-store>=0.0.30,<1.0.0a0",
  "azure-identity>=1.3.1",
  "azure-storage-blob>=12.1",
  "black>=19.3b0",
  "boto3",
  "botocore",
  "bumpversion",
  "check-manifest",
  "codecov",
  "coverage",
  "gcsfs>=0.2",
  "google-compute-engine",
  "ipython>=5,<9",
  "ipywidgets",
  "moto>=5,<5.1",
  "notebook",
  "pip>=18.1",
  "pre-commit",
  "pyarrow>=2",
  "pygithub>=1.55",
  "pytest>=4.1",
  "pytest-cov>=2.6.1",
  "pytest-env>=0.6.2",
  "pytest-mock>=1.10",
  "recommonmark",
  "requests>=2.21",
  "setuptools>=38.6",
  "tox",
  "twine>=1.11",
  "wheel>=0.31",
]
urls.Documentation = "https://papermill.readthedocs.io"
urls.Funding = "https://nteract.io"
urls.Source = "https://github.com/nteract/papermill/"
urls.Tracker = "https://github.com/nteract/papermill/issues"
scripts.papermill = "papermill.__main__:papermill"

[tool.setuptools]
packages = [ "papermill" ]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "papermill.version.version" }

# Example configuration for Black.

[tool.black]
line-length = 120
target-version = [ 'py310' ]
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
  "docs",
]
format.quote-style = "preserve"

# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
  "E",
  "F",      # see: https://pypi.org/project/pyflakes
  "I",      # isort
  "RUF100", # unnecessary noqa comment
  "UP",     # pyupgrade
  "W",      # see: https://pypi.org/project/pycodestyle
]
lint.ignore = [
  "E731",  # Do not assign a lambda expression, use a def
  "Q",     # Ignore quotes
  "UP032", # Ignore Use f-string instead of `format` call
]
# Use Google-style docstrings.
lint.pydocstyle.convention = "google"

[tool.codespell]
quiet-level = 3
# comma separated list of words; waiting for:
#  https://github.com/codespell-project/codespell/issues/2839#issuecomment-1731601603
# also adding links until they ignored by its: nature
#  https://github.com/codespell-project/codespell/issues/2243#issuecomment-1732019960
ignore-words-list = "dne, compiletime"

[tool.pytest.ini_options]
env = [
  "AWS_SECRET_ACCESS_KEY=foobar_secret",
  "AWS_ACCESS_KEY_ID=foobar_key",
]
filterwarnings = [
  "ignore:.*imp module is deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
branch = false

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
omit = [
  "papermill/tests/*",
  "papermill/version.py",
]

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py{310,311,312,313}, dist, manifest, docs, binder

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313, docs, dist

# Manifest
[testenv:manifest]
skip_install = true
deps = check-manifest
commands = check-manifest
ignore =
    .readthedocs.yaml

# Docs
[testenv:docs]
description = invoke sphinx-build to build the HTML docs
deps =
    .[docs]
extras = docs
commands =
    sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
    python -c 'import pathlib; print("documentation available under file://\\{0\\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'

# Binder
[testenv:binder]
description = ensure /binder/*ipynb are runnable
deps =
    -r binder/requirements.txt
commands = python -c "import glob; import papermill as pm; [pm.execute_notebook(input, '{toxworkdir}/out.ipynb', parameters=\\{'binder_dir':'binder'\\}) for input in glob.glob('binder/**/*.ipynb')]"

# Distro
[testenv:dist]
skip_install = true
deps = build
commands =
    python -m build --outdir {distdir}
    /bin/bash -c 'python -m pip install -U --force-reinstall {distdir}/papermill*.tar.gz'
    /bin/bash -c 'python -m pip install -U --force-reinstall {distdir}/papermill*.whl'

[testenv]
# disable Python's hash randomization for tests that stringify dicts, etc
setenv =
    PYTHONHASHSEED = 0
    AWS_ACCESS_KEY_ID=foobar_key
    AWS_SECRET_ACCESS_KEY=foobar_secret
passenv = *
basepython =
    py310: python3.10
    py311: python3.11
    py312: python3.12
    py313: python3.13
    manifest: python3.13
    dist: python3.13
    docs: python3.13
    binder: python3.13
deps = .[dev]
# Have to use /bin/bash or the `*` will cause that argument to get quoted by the tox command line...
allowlist_externals = /bin/bash
commands = pytest -v --maxfail=2 --cov=papermill -W always {posargs}
"""

[tool.bumpversion]
current_version = "2.6.0"
commit = true
tag = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "papermill/version.py"
